# Django-Rest-Framework-Project-Template

./: .gitignore  .pylintrc  docker-compose-dev.yml  docker-entrypoint.sh  pyproject.toml  readme.md  requirements.txt  setup.cfg
.envs/.local/: .django  .postgres
apps/: commons.py
apps/jwt_custom_auth/: apps.py  authentication.py  serializers.py  urls.py  views.py
apps/setup/: admin.py  apps.py
apps/user/: admin.py  models.py  serializers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_userauth_groups_userauth_is_active_userauth_is_staff_and_more.py  0003_alter_userauth_email.py  0004_alter_userauth_password.py  0005_alter_countries_id_alter_userauth_id.py  0006_alter_userauth_country.py  0007_alter_userauth_photo.py  0008_auto_20221203_2208.py  0009_userauth_status.py
apps/user/test/: test_views.py  tests_model.py
compose/local/django/: Dockerfile  start
compose/local/django/celery/beat/: start
compose/local/django/celery/flower/: start
compose/local/django/celery/worker/: start
compose/production/django/: Dockerfile  entrypoint  start
compose/production/django/celery/beat/: start
compose/production/django/celery/flower/: start
compose/production/django/celery/worker/: start
compose/production/postgres/: Dockerfile
core/: asgi.py  urls.py
core/settings/: .env  __init__.py  base.py  local.py  production.py  settings.py
init/postgres/: init.sql
render/: build.sh
requirements/: base.txt  local.txt  production.txt
