[tool.poetry]
name = "core"
version = "0.1.0"
description = "core of django rest framework"
authors = ["Juan Carlos A <abjuancarlos.12@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
asgiref==3.6.0
astroid==2.15.2
asttokens==2.2.1
async-timeout==4.0.2
attrs==23.1.0
autopep8==2.0.2
backcall==0.2.0
build==0.10.0
CacheControl==0.12.11
certifi==2022.12.7
cffi==1.15.1
channels==4.0.0
charset-normalizer==3.1.0
cleo==2.0.1
coreapi==2.3.3
coreschema==0.0.4
coverage==7.2.3
crashtest==0.4.1
cryptography==40.0.2
decorator==5.1.1
defusedxml==0.7.1
dill==0.3.6
distlib==0.3.6
Django==4.2
django-allauth==0.54.0
django-channels==0.7.0
django-ckeditor==6.5.1
django-cors-headers==3.14.0
django-crispy-forms==2.0
django-dotenv==1.4.2
django-environ==0.10.0
django-extensions==3.2.1
django-filter==23.1
django-js-asset==2.0.0
django-redis==5.2.0
django-shell-plus==1.1.7
django-silk==5.0.3
django-storages==1.13.2
djangorestframework==3.14.0
djangorestframework-simplejwt==5.2.2
drf-yasg==1.21.5
dulwich==0.21.3
environ==1.0
executing==1.2.0
filelock==3.12.0
gprof2dot==2022.7.29
html5lib==1.1
idna==3.4
importlib-metadata==6.6.0
inflection==0.5.1
installer==0.7.0
ipdb==0.13.13
ipython==8.12.0
isort==5.12.0
itypes==1.2.0
jaraco.classes==3.2.3
jedi==0.18.2
jeepney==0.8.0
Jinja2==3.1.2
jsonschema==4.17.3
keyring==23.13.1
lazy-object-proxy==1.9.0
lockfile==0.12.2
Markdown==3.4.3
MarkupSafe==2.1.2
matplotlib-inline==0.1.6
mccabe==0.7.0
more-itertools==9.1.0
msgpack==1.0.5
numpy==1.24.2
oauthlib==3.2.2
packaging==23.0
pandas==2.0.0
parso==0.8.3
pendulum==2.1.2
pep8==1.7.1
pexpect==4.8.0
pickleshare==0.7.5
Pillow==9.5.0
pkginfo==1.9.6
platformdirs==2.6.2
poetry==1.4.2
poetry-core==1.5.2
poetry-plugin-export==1.3.1
prompt-toolkit==3.0.38
psycopg2==2.9.6
ptyprocess==0.7.0
pure-eval==0.2.2
pycodestyle==2.10.0
pycparser==2.21
Pygments==2.15.0
PyJWT==2.6.0
pylint==2.17.2
pylint-django==2.5.3
pylint-plugin-utils==0.7
pyproject_hooks==1.0.0
pyrsistent==0.19.3
python-dateutil==2.8.2
python-social-auth==0.3.6
python3-openid==3.2.0
pytz==2023.3
pytzdata==2020.1
rapidfuzz==2.15.1
redis==4.5.4
requests==2.28.2
requests-oauthlib==1.3.1
requests-toolbelt==0.10.1
ruamel.yaml==0.17.21
ruamel.yaml.clib==0.2.7
SecretStorage==3.3.3
shellingham==1.5.0.post1
six==1.16.0
smart-getenv==1.1.0
social-auth-app-django==5.2.0
social-auth-core==4.4.2
sqlparse==0.4.3
stack-data==0.6.2
tomli==2.0.1
tomlkit==0.11.7
traitlets==5.9.0
trove-classifiers==2023.4.29
typing_extensions==4.5.0
tzdata==2023.3
uritemplate==4.1.1
urllib3==1.26.15
virtualenv==20.21.1
wcwidth==0.2.6
webencodings==0.5.1
whitenoise==6.4.0
wrapt==1.15.0
zipp==3.15.0


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
